# manaflow

./: .env.example  .env.selfhost.template  .envrc  .gitignore  .gitmodules  0github  CLAUDE.local.md  CLAUDE.md  CLEANUP.md  Dockerfile  Dockerfile.test.ts  LICENSE  MISSION-ACCOMPLISHED.md  NEW MICROMANAGING CLAUDE CODES INTERFACE.md  PLAN.md  README.md  RUST-PROXY-MIGRATION-COMPLETE.md  SELFHOSTING.md  THIRD_PARTY_LICENSES.md  TODOS.md  docker-compose.selfhost.yml  docker-compose.standalone.yml  eslint.config.js  package.json  pyproject.toml  tsconfig.json  vitest.workspace.ts
.beads/: .gitignore  deletions.jsonl  issues.jsonl
.claude/: settings.json
.claude/commands/: ralph.md  review.md  review_agent.md
.claude/hooks/: bun-check.sh  codex-review.sh  continue-check.sh  multi-agent-review.sh  pre-push-ci-guard.sh  ralph-sync.sh  test-verification.sh
.cursor/: worktrees.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: cmux-env.yml  cmux-proxy.yml  cmux-pty.yml  cmux-xterm.yml  docker.yml  global-proxy.yml  host-screenshot-collector.yml  morph-snapshot.yml  native-core.yml  publish-devsh-memory-mcp.yml  release-pr.yml  release-updates.yml  scheduled-release-pr.yml  screenshot-collector-host.yml  screenshot-collector.yml  tests.yml
apps/chatgpt-app/: DESIGN.md  app.json  package.json
apps/client/: build-mac-workaround.sh  electron-builder.json  electron.vite.config.test.ts  electron.vite.config.ts  index-electron.html  index.html  package.json  publish-mac-run-workaround.sh  tsconfig.json  vite.config.ts
apps/edge-router/: wrangler.toml
apps/global-proxy/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  cloudbuild.yaml
apps/global-proxy-freestyle/: package.json
apps/manaflowX/: .env.example  .gitmodules  AGENTS.md  CLAUDE.md  README.md  convex.json  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  tsconfig.json
apps/preview-proxy/: package.json
apps/server/: package.json
apps/server/native/core/: Cargo.toml
apps/server/native/core/.cargo/: config.toml
apps/server/native/core/src/: lib.rs  tests.rs  types.rs  util.rs
apps/server/native/core/src/diff/: mod.rs  refs.rs  workspace.rs
apps/server/native/core/src/merge_base/: git.rs  mod.rs
apps/server/native/core/src/proxy/: auth.rs  mod.rs  routing.rs  server.rs  tests.rs  tunnel.rs
apps/server/native/core/src/repo/: cache.rs
apps/worker/: package.json
apps/www/: PR-REVIEW-STRATEGY.md  eslint.config.js  instrumentation-client.ts  middleware.ts  next.config.ts  package.json  pr-review.config.ts  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.ts
configs/: ide-deps.json
configs/gtk-2.0/: gtkrc
configs/gtk-3.0/: settings.ini
configs/nfpm/: cmux.yaml
configs/openbox/: menu.xml
configs/systemd/: cmux-bwrap-setup.service  cmux-cdp-proxy.service  cmux-cmux-code.service  cmux-coder.service  cmux-devtools.service  cmux-dockerd.service  cmux-envd.service  cmux-ide.service.template  cmux-memory-setup.service  cmux-openbox.service  cmux-openvscode.service  cmux-proxy.service  cmux-pty.service  cmux-swap-activate.service  cmux-worker.service  cmux-xterm.service  (+6 more)
configs/systemd-host/: cmux-openvscode.service  cmux-worker.service  cmux.env  cmux.target
crates/cmux-env/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.demo  Dockerfile.e2e  README.md
crates/cmux-env/scripts/: demo.sh  entrypoint-demo.sh  install.sh  prepare-release.sh  release.sh  test-e2e-focused.sh  test-e2e-shell-hooks-working.sh  test-in-docker.sh
crates/cmux-env/src/: lib.rs
crates/cmux-env/tests/: integration.rs
crates/cmux-xterm/: Cargo.toml
crates/cmux-xterm/src/: main.rs  pty.rs  session.rs
crates/cmux-xterm/static/: index.html
docs/: RUST-PROXY-COMPLETE.md  effect-migration-task-list.md  electron-proxy-rust-refactor-plan.md  introduction.mdx  mint.json  opencode-server-plan.md  package.json  rust-proxy-integration.md  styles.css
ios-app/: .gitignore  CLAUDE.md  PLAN-messages-schema.md  project.yml
prompts/: environment-versions-0.md  vscode-morph.md
scripts/: _port-clean.sh  bd-tui.sh  build-cli.ts  build-electron-prod.sh  build-modal-snapshot.ts  cdp_console.py  ci-local.sh  code-review-runner.ts  create-test-conversations.ts  daytona-snapshot.ts  daytona-worker.ts  dev-container.sh  dev-enhanced.sh  dev.sh  docker-build-multiplatform.sh  docker-build.sh  docker-push-simple.sh  docker-push.sh  docker-run-browser-agent.sh  docker-shell.sh  docker-trigger-screenshot.sh  e2b_templates.py  freestyle-upload-test.ts  freestyle_list_vms.py  local-preview-to-pr.ts  maintenance.sh  monitor-cert.sh  morph-active-instance-stats.ts  morph-correlate-instances.ts  morph-http-go.ts  morph-instance-monitor.sh  morph-instance-ttl-stats.ts  morph-pause-old-active-instances.ts  morph-pause-old-sandboxes.ts  morph-snapshot.ts  morph-start-instance.ts  morph-stop-all-instances.ts  morph-stop-no-ttl-instances.ts  morph-stop-null-instances.ts  morph-stop-old-instances.ts  (+36 more)
skills/: README.md
(+1562 files in other folders)
