[project]
name = "cmux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "cdp-use>=1.4.1",
    "morphcloud>=0.1.91",
    "requests>=2.32.4",
    "freestyle_client",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "rich>=13.7.0",
]

[tool.uv.sources]
freestyle_client = { path = "scripts/freestyle-client-pkg" }

[tool.basedpyright]
reportUnusedCallResult = false
exclude = [
    "node_modules",
    ".git",
    "logs",
    "crates",
    "apps",
    "packages",
    "configs",
    "docs",
    "docs-ai",
    "dev-docs",
    "data",
    "evals",
    "prompts",
]
